# smart-clipboard-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
smart_clipboard/: __init__.py  mcp_server.py
smart_clipboard/core/: __init__.py  ai_detector.py  cache.py  intelligence.py  storage.py
smart_clipboard/models/: __init__.py  schemas.py
smart_clipboard/tests/: test_cache.py  test_intelligence.py  test_mcp.py  test_storage.py
